# charm-circles

./: .gitignore  CIRCLE_DISCOVERY_IMPLEMENTATION.md  CLEANUP_SUMMARY.md  Cargo.toml  KNOWN_ISSUES.md  README.md  SPELL_SCRIPTS_README.md
docs/: GETTING_STARTED.md  VALIDATION_ISSUES.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx
frontend/src/components/: AddressSelector.tsx  CircleCard.tsx  CircleGrid.tsx  CreateCircleModal.tsx  Header.tsx  JoinCircleModal.tsx
frontend/src/contexts/: WalletContext.tsx
frontend/src/services/: CircleService.ts  CreateCircleService.ts  JoinCircleService.ts  WalletService.ts
scripts/: README.md  SCRIPTS_CLEANUP_SUMMARY.md  TESTING_GUIDE.md  WALLET_SETUP.md  check-utxo-confirmation.sh  create-circle-command.sh  find-circle-utxo.sh  get-circle-state.sh  load-wallet.sh  run-contribute.sh  run-create-circle.sh  run-join-circle.sh  start-backend.sh  test-create-circle-api.sh  test-join-circle-api.sh
scripts/archive/: README.md  run-contribute.sh  run-create-circle.sh  run-join-circle.sh
server/: .gitignore  README.md  package-lock.json  package.json
server/src/: index.ts
server/src/controllers/: circle.controller.ts  spell.controller.ts  wallet.controller.ts
server/src/middleware/: errorHandler.ts
server/src/routes/: circle.routes.ts  spell.routes.ts  wallet.routes.ts
server/src/services/: bitcoin.service.ts  circle.service.ts  spell.service.ts  state.service.ts
server/src/utils/: errors.ts
spells/: README.md  contribute.yaml  create-circle.yaml  join-circle.yaml  mint-nft.yaml  mint-token.yaml
src/: lib.rs  main.rs
src/wasm/: mod.rs
