[package]
name = "charmcircle"
description = "A simple Charms app"
version = "0.1.0"
edition = "2021"
license = "MIT"

# serialize_state binary is only for native builds, not WASM
[[bin]]
name = "serialize_state"
path = "src/bin/serialize_state.rs"

[dependencies]
charms-sdk = { version = "0.10.0" }
serde = { version = "1.0", features = ["derive"] }
sha2 = { version = "0.10.9" }
anyhow = { version = "1.0.98" }
# bitcoin crate removed - not needed for WASM build and causes secp256k1 compilation issues
# We only use basic types (u64 for satoshis, [u8; 33] for pubkeys) which we define ourselves
bincode = { version = "1.3" }

# Disable randomness to avoid WASI random_get import
# Remove getrandom dependency - it's not helping since ark-std uses WASI directly
# The issue is that ark-std → rand uses WASI random_get
# We'll need to wait for charms-sdk to fix this, or use a workaround

# These are only needed for native binaries (serialize_state), not WASM
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hex = "0.4"
serde_cbor = "0.11"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
