[package]
name = "charmcircle"
description = "A simple Charms app"
version = "0.1.0"
edition = "2021"
license = "MIT"

# serialize_state binary is only for native builds, not WASM
[[bin]]
name = "serialize_state"
path = "src/bin/serialize_state.rs"

# update_state binary is only for native builds, not WASM
[[bin]]
name = "update_state"
path = "src/bin/update_state.rs"

# test_deserialization binary for debugging serialization issues
[[bin]]
name = "test_deserialization"
path = "src/bin/test_deserialization.rs"

[dependencies]
# Try disabling default features to avoid rand dependency
charms-sdk = { version = "0.10.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
sha2 = { version = "0.10.9" }
anyhow = { version = "1.0.98" }
# bitcoin crate removed - not needed for WASM build and causes secp256k1 compilation issues
# We only use basic types (u64 for satoshis, [u8; 33] for pubkeys) which we define ourselves
# Use ciborium for CBOR serialization (works in no_std, same as Charms SDK uses)
ciborium = { version = "0.2", default-features = false }
# Force getrandom with custom feature globally (affects transitive dependencies too)
# This ensures WASI backend is never enabled, only the custom backend
# Pinning version to avoid feature drift
getrandom = { version = "0.2.15", default-features = false, features = [
    "custom",
] }

# These are only needed for native binaries (serialize_state), not WASM
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hex = "0.4"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
